--- a/app/views/etkh_profiles/educations/_education.html.haml
+++ b/app/views/etkh_profiles/educations/_education.html.haml
@@ -2,10 +2,11 @@
   .title
     %h3
       = education.university
-  .actions
-    = link_to "Edit", "/members/#{current_user.etkh_profile.id}/educations/#{education.id.to_s}/edit", remote: true, class: "edit-education"
-    = " | "
-    = link_to "Delete", "/members/#{current_user.etkh_profile.id}/educations/#{education.id.to_s}", method: "DELETE", remote: true, class: "delete-education"
+  - if edit_profile
+    .actions
+      = link_to "Edit", "/members/#{current_user.etkh_profile.id}/educations/#{education.id.to_s}/edit", remote: true, class: "edit-education"
+      = " | "
+      = link_to "Delete", "/members/#{current_user.etkh_profile.id}/educations/#{education.id.to_s}", method: "DELETE", remote: true, class: "delete-education"
   .course
     %p
       = education.course
