--- a/app/views/etkh_profiles/educations/redraw.js.erb
+++ b/app/views/etkh_profiles/educations/redraw.js.erb
@@ -1,6 +1,6 @@
 // removes current educations from DOM and adds them in order of date
 
-var educations_html = "<%= j(render partial: 'etkh_profiles/educations/educations', locals: { educations: current_user.etkh_profile.educations }) %>";
+var educations_html = "<%= j(render partial: 'etkh_profiles/educations/educations', locals: { educations: current_user.etkh_profile.educations, edit_profile: true }) %>";
 $("#educations").replaceWith(educations_html);
 
 // hide form
