--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -1,5 +1,41 @@
 @import "shared/partials";
 
+
+#positions {
+  margin-left: 7px;
+
+  .position {
+    margin-bottom: 20px;
+    p { margin-bottom: 0px; }
+
+    .title { display: inline-block; }
+    .actions {
+      display: inline-block;
+      margin-left: 20px;
+    }
+    .dates {
+      font-size: 0.8em;
+    }
+  }
+}
+#educations {
+    margin-left: 7px;
+
+    .education {
+      margin-bottom: 20px;
+      p { margin-bottom: 0px; }
+
+      .title { display: inline-block; }
+      .actions {
+        display: inline-block;
+        margin-left: 20px;
+      }
+      .dates {
+        font-size: 0.8em;
+      }
+    }
+  }
+
 .eighty-thousand-hours-profile {
   .left-filler {
     position: absolute;
@@ -15,7 +51,9 @@
 
   .heading {
     background-color: #FFFFFF;
-    padding-top: 40px;
+    margin-top: 20px;
+    padding-top: 30px;
+    padding-bottom: 20px;
 
     .avatar {
       img {
@@ -46,15 +84,15 @@
   }
 
   .content {
-    padding-top: 30px;
-
     .shortened-list { margin-bottom: 0px; }
     .see-more { margin-left: 25px; }
 
     .section {
-      margin-top: 30px;
+      margin-top: 20px;
+      //margin-right: 30px;
       padding-top: 15px;
-      padding-right: 50px;
+      padding-right: 15px;
+
       .title {
 
       }
@@ -65,7 +103,6 @@
   }
 
   .sidebar {
-    padding-top: 40px;
     font-size: 0.8em;
     color: #555;
     .joined {
@@ -176,24 +213,6 @@
   }
 
   #experience {
-    #positions {
-      margin-left: 7px;
-
-      .position {
-        margin-bottom: 20px;
-        p { margin-bottom: 0px; }
-
-        .title { display: inline-block; }
-        .actions {
-          display: inline-block;
-          margin-left: 20px;
-        }
-        .dates {
-          font-size: 0.8em;
-        }
-      }
-    }
-
     .new-form {
       width: 385px;
       height: 300px;
@@ -306,24 +325,6 @@
 }
 
 #education {
-  #educations {
-    margin-left: 7px;
-
-    .education {
-      margin-bottom: 20px;
-      p { margin-bottom: 0px; }
-
-      .title { display: inline-block; }
-      .actions {
-        display: inline-block;
-        margin-left: 20px;
-      }
-      .dates {
-        font-size: 0.8em;
-      }
-    }
-  }
-
   .new-form {
     width: 385px;
     height: 350px;
