--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -8,15 +8,22 @@
           = link_to image_tag('/assets/profiles/avatar_default_200x200.png'), user.avatar.url
       .span8
         .header
-          %h1.name
-            = profile.name
-          %h2.location 
-            = user.location
-          %h2.organisation
-            = profile.organisation
-          .email
-            - if current_user && current_user.eighty_thousand_hours_member?
-              %h3= user.email
+          .info
+            %h1.name
+              = profile.name
+            %p.location 
+              = user.location
+            %p.position
+              = user.etkh_profile.current_position
+            %p.organisation
+              = profile.organisation
+            %p.industry
+              = profile.career_sector
+            %p.karma-score
+              = user.get_karma_score
+            .email
+              - if current_user && current_user.eighty_thousand_hours_member?
+                %p= user.email
           .buttons
             #contact
               = link_to "Contact", {controller: 'users', action: 'initalise_contact_user', user_id: user.id}, :remote => true, class: "btn btn-danger", id: "contact-btn"
@@ -28,6 +35,19 @@
             -# if user.linkedin_email != nil
             #linkedin-add
               = link_to image_tag('/assets/linkedin/linkedin_button_reg.gif'), {controller: 'authentications', action: 'linkedin_invite_connection', email: user.linkedin_email, user_id: user.id}, remote: false, id: "linkedin-invite-btn"
+          - if user.external_links?
+            .external-links
+              - if user.external_website?
+                = link_to "<i class='icon-info-sign'></i> Personal website".html_safe, user.external_website
+
+              - if user.external_twitter?
+                = link_to image_tag("social/twitter.png") + " Twitter".html_safe, user.external_twitter
+              
+              - if user.external_facebook?
+                = link_to image_tag("social/facebook.png") + " Facebook".html_safe, user.external_facebook
+              
+              - if user.external_linkedin?
+                = link_to image_tag("social/linkedin.png") + " LinkedIn".html_safe, user.external_linkedin
 
           #contact-modal
         -#%hr
