--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -13,27 +13,17 @@
               = profile.name
             %p.location 
               = user.location
-            #labels
-              .position
-                %p.heading-label
-                  Position
-                %p.entry
-                  = user.etkh_profile.current_position
-              .organisation
-                %p.heading-label
-                  Organisation
-                %p.entry
-                  = profile.organisation
-              .industry
-                %p.heading-label
-                  Industry
-                %p.entry
-                  = profile.career_sector
-              .karma-score
-                %p.heading-label
-                  Karma score
-                %p.entry
-                  = user.get_karma_score
+            #labels-section
+              .labels
+                %p Position
+                %p Organisation
+                %p Industry
+                %p Karma score
+              .entries
+                %p= profile.current_position
+                %p= profile.organisation
+                %p= profile.career_sector
+                %p= user.get_karma_score
             .email
               - if current_user && current_user.eighty_thousand_hours_member?
                 %p= user.email
