--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -93,6 +93,7 @@
           p {
             display: block;
             line-height: 22px;
+            height: 22px;
           }
         }
       }
