--- a/app/views/etkh_profiles/_profile_condensed_2.html.haml
+++ b/app/views/etkh_profiles/_profile_condensed_2.html.haml
@@ -1,11 +1,11 @@
 -# profile is passed as a local var
 - user = profile.user
-.eighty-thousand-hours-profile-condensed-2
+.eighty-thousand-hours-profile-condensed-2{ id: "#{user.id}" }
   .avatar
-    = link_to image_tag(user.avatar.url(:small)), "/members/#{user.slug}"
+    = link_to image_tag(user.avatar.url(:small)), "/members/#{user.slug}", class: "profile-link"
   .body
     .name
-      = link_to user.name, "/members/#{user.slug}"
+      = link_to user.name, "/members/#{user.slug}", class: "profile-link"
     .content
       - if profile.current_position
         .position
