--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -608,6 +608,8 @@
 
 #profile-hover {
   position: absolute;
+  width: 300px;
+  height: 150px;
   padding: 10px;
   background-color: #FFFFFF;
   @include rounded_borders(#A1A1A1, 3px, 5px);
