--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -606,30 +606,33 @@
   }
 }
 
-#profile-hover {
+#profile-popup {
   position: absolute;
-  width: 300px;
-  height: 150px;
-  padding: 10px;
-  background-color: #FFFFFF;
-  @include rounded_borders(#A1A1A1, 3px, 5px);
 
-  .avatar {    
-    img {
-      height: 100px;
-      width: 100px;
-      @include box_shadow(#555, 0px, 0px, 6px);
-    }
-  }
-  .body {
-    .name {
+  #profile-hover {
+    width: 300px;
+    height: 150px;
+    padding: 10px;
+    background-color: #FFFFFF;
+    @include rounded_borders(#A1A1A1, 3px, 5px);
 
+    .avatar {    
+      img {
+        height: 100px;
+        width: 100px;
+        @include box_shadow(#555, 0px, 0px, 6px);
+      }
     }
-    .content {
-      p {
-        font-size: 14px;
-        line-height: 16px;
-        margin: 0px;
+    .body {
+      .name {
+
+      }
+      .content {
+        p {
+          font-size: 14px;
+          line-height: 16px;
+          margin: 0px;
+        }
       }
     }
   }
