Excluded current user from generate users algorithm

--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -200,7 +200,7 @@
             Other members
           %hr
           .body
-            - EtkhProfile.generate_users(15).each do |user|
+            - EtkhProfile.generate_users(15, [current_user, user]).each do |user|
               = render partial: 'profile_condensed_2', locals: { profile: user.etkh_profile }
         
         #profile-popup
