--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -51,7 +51,15 @@
     padding-left: 15px;
 
     .avatar {
-      img { @include box_shadow(#555, 0px, 0px, 6px); }
+      @include box_shadow(#555, 0px, 0px, 6px);
+      width: 200px;
+      height: 200px;
+      img {
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        clip:rect(0px,200px,200px,0px);
+      }
     }
 
     .header-main {
@@ -114,7 +122,7 @@
     .external-links {
       display: inline-block;
       float: right;
-      margin-top: 15px;
+      margin-top: 25px;
       margin-right: 25px;
       .link {
         margin-bottom: 5px;
@@ -539,6 +547,12 @@
     @include box_shadow(#555, 0px, 0px, 2px);
     height: 60px;
     width: 60px;
+    img {
+      height: 60px;
+      width: 60px;
+      position: absolute;
+      clip:rect(0px,60px,60px,0px);
+    }
   }
 
   .body {
@@ -553,7 +567,7 @@
     }
     .content {
       position: relative;
-      top: -5px;
+      top: -2px;
       margin: 0px;
       p {
         font-size: 14px;
@@ -569,7 +583,15 @@
   margin-bottom: 7px;
 
   .avatar {
-
+    width: 110px;
+    height: 110px;
+    @include box_shadow(#555, 0px, 0px, 5px);
+    img {
+      width: 110px;
+      height: 110px;
+      position: absolute;
+      clip:rect(0px,110px,110px,0px);
+    }
   }
 
   .heading {
@@ -609,7 +631,7 @@
 #profile-popup { position: absolute; }
 
 #profile-hover {
-    width: 325px;
+    width: 300px;
     height: 150px;
     padding: 10px;
     background-color: #FFFFFF;
