--- a/app/views/etkh_profiles/_profile_teaser.html.haml
+++ b/app/views/etkh_profiles/_profile_teaser.html.haml
@@ -2,7 +2,7 @@
   .row-fluid
     .span2
       .avatar
-        = link_to (image_tag user.avatar(:thumb)), etkh_profile_path(user)
+        = link_to (image_tag user.avatar(:medium)), etkh_profile_path(user)
     
     .span10
       .heading
